Update DocumentHelper